...
    var currentPlayer: Player!
    
    var score:Int = 0
    var canGuess:Bool = true
    var correctAnswer:String?
    
    //Survival
    var strikes:Int = 0
    
    //Standard
    static var timer = NSTimer()
    static var minutes = 0
    static var seconds = 0
...
        case .Survival:
            gameName = "Survival"
            modeLabel.text = " "
            modeLabel.textColor = UIColor.redColor()
            break
        case .Practice:
            gameName = "Practice"
            modeLabel.text = "Practice"
            modeLabel.textColor = UIColor.lightGrayColor()
            break
        }
        self.screenName = gameName
    }
...
